src/objects/Attivita_Evento__c.object
<CustomObject>
    <fields>
        <fullName>Activity_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity tracking</label>
        <referenceTo>Activity_tracking__c</referenceTo>
        <relationshipName>Event_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campagna__c</fullName>
        <label>Campagna</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Attivita_Evento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Scostamento_Budget_Invoiced__c</fullName>
        <formula>IF(Total_Invoiced_Net_VAT__c = 0 , 0, ((Total_Budget_Net_VAT__c - Total_Invoiced_Net_VAT__c) /Total_Invoiced_Net_VAT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scostamento Budget/Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_Attivita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipologia Attività</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.Attiva__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Evento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pannello_Amministrazione_Marketing__c</referenceTo>
        <relationshipName>Attivita_Evento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Net_VAT__c</fullName>
        <label>Final Cost (without VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Net_VAT__c</fullName>
        <label>Final Cost (with VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type of cost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Beverage</fullName>
                </value>
                <value>
                    <fullName>Waiters</fullName>
                </value>
                <value>
                    <fullName>Flatware</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Florist</fullName>
                </value>
                <value>
                    <fullName>Calligrapher</fullName>
                </value>
                <value>
                    <fullName>Models</fullName>
                </value>
                <value>
                    <fullName>Photographer</fullName>
                </value>
                <value>
                    <fullName>Video Maker</fullName>
                </value>
                <value>
                    <fullName>Intepreter</fullName>
                </value>
                <value>
                    <fullName>Tour guide</fullName>
                </value>
                <value>
                    <fullName>Location venue</fullName>
                </value>
                <value>
                    <fullName>Invitation cards</fullName>
                </value>
                <value>
                    <fullName>Entrance Ticket/fee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shipping cost</fullName>
                    <isActive>false</isActive>
                    <label>Shipping cost</label>
                </value>
                <value>
                    <fullName>Shipping courier</fullName>
                    <isActive>false</isActive>
                    <label>Shipping courier</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Costo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Costo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costi</pluralLabel>
    <recordTypes>
        <fullName>Activity_Cost</fullName>
        <active>true</active>
        <label>Activity Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Cost</fullName>
        <active>true</active>
        <label>Campaign Cost</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Required_Cost</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Total_Budget_Net_VAT__c), ISBLANK( Total_Invoiced_Net_VAT__c))</errorConditionFormula>
        <errorMessage>Inserire almeno un costo</errorMessage>
    </validationRules>
</CustomObject>